--- a/ms/Supps_markdown.Rmd
+++ b/ms/Supps_markdown.Rmd
@@ -49,7 +49,7 @@ The daily probability of juvenile PSHB transitioning to the preoviposition stage
 | 32 | 10.9 |  | 7 |  | 0.0206 |
 
 
-A TPC was fit to the empirical data using the maximum likelihood method (Supp. Figure 1). The mean parameter estimates for the TPC ($P_{max}$, $T_{opt}$, $c$, $d$) and their standard deviations (solving the Hessian matrix and taking the square root) were:
+A TPC was fit to the empirical data using the maximum likelihood method (Supp. Figure 1). The mean parameter estimates for the TPC and their standard deviations (solving the Hessian matrix and taking the square root) were:
 
   * $P_{max} = 0.045\space(0.003)$
   * $T_{opt} = 29.7\space(1.25)$
@@ -57,7 +57,7 @@ A TPC was fit to the empirical data using the maximum likelihood method (Supp. F
   * $d = 0.27\space(0.18)$
  
  
-![Supp. Fig. 1. Juvenile transition probabilities at different temperatures, given by Umeda & Paine (triangles) and Walgama & Zalucki (circles), with TPC fitted to the data.](Supps_markdown_files/phi_J_TPC.jpeg) 
+![Supp. Fig. 1. Juvenile transition probabilities at different temperatures, given by Umeda & Paine (triangles) and Walgama & Zalucki (circles), with TPC fitted to the data.](Supps_markdown_files/alpha_J_TPC.jpeg) 
     
  
     
@@ -78,7 +78,7 @@ where $\lambda$ is the total mortality of the stage, and $\delta$ is the total d
 
   
 #### Supplementary Table 2
-###### Total proportion mortality of eggs and pupae at different temperatures (from Walgama & Zalucki 2007), and the daily survival probabilities estimated from these data.
+###### Total proportion mortality of eggs and pupae at different temperatures (from Walgama & Zalucki 2007), and the daily survival probabilities estimated from these data. Note that juveniles did not develop at 15 °C, so daily mortality could not be defined in Supp. Eq. 2. 
 
 | Temperature (°C)|  Total egg mortality | Total pupa mortality | Daily egg survival | Daily pupa survival |
 |:--:|:--:|:--:|:--:|:--:|
@@ -127,6 +127,8 @@ To estimate values for $b$ and $c,$ we fitted this model in a Bayesian framework
 When running the population model, tree temperatures were calculated each time-step according to Supp. Equations 3 and 4, using the above values of $b$ and $c$, and that day's $T_{tree}$, $T_{soil}$ and $H$ values (from the climate database).
 
 ![Supp. Fig. 3. Mean daily tree temperatures per day of year, as recorded by sap flow loggers (points), and as predicted by our model (red line), given the mean daily maximum air temperature (dark blue line) and soil temperature (light blue).](Supps_markdown_files/tree_temp_plot.png) 
+
+![Supp. Fig. 4. Average tree temperature predicted for Australia, California and South Africa.](Supps_markdown_files/Supp_temps.jpeg) 
 
 
 ## Estimating diffusion coefficient
