Update Supps with new 2D dist function. Add references

--- a/ms/SuppsRefs.bib
+++ b/ms/SuppsRefs.bib
@@ -81,3 +81,11 @@
 	year = {2019},
 	pages = {1601},
 }
+
+@book{shigesada_biological_1997,
+	series = {Oxford {Series} in {Ecology} and {Evolution}},
+	title = {Biological {Invasions}: {Theory} and {Practice}},
+	publisher = {Oxford University Press},
+	author = {Shigesada, N and Kawasaki, K},
+	year = {1997},
+}
